--- a/src/contractor-view/bids-submit.html
+++ b/src/contractor-view/bids-submit.html
@@ -33,32 +33,32 @@
                       <form class="form">
                         
                         <ul class="list-unstyled mb-30 lh-lg">
-                          <li class="mb-3 d-flex">
-                            <span class="form-label me-2">Name:</span>
+                          <li class="mb-20 d-flex">
+                            <span class="fs-6 lh-base form-label me-2">Name:</span>
                             <small>Bricks and Mortar</small>
                           </li>
-                          <li class="mb-3 d-flex">
-                            <span class="form-label me-2">Status:</span>
+                          <li class="mb-20 d-flex">
+                            <span class="fs-6 lh-base form-label me-2">Status:</span>
                             <small>Active</small>
                           </li>
-                          <li class="mb-3 d-flex">
-                            <span class="form-label me-2">Pricing View:</span>
+                          <li class="mb-20 d-flex">
+                            <span class="fs-6 lh-base form-label me-2">Pricing View:</span>
                             <small>Open</small>
                           </li>
-                          <li class="mb-3 d-flex">
-                            <span class="form-label me-2">Visibility:</span>
+                          <li class="mb-20 d-flex">
+                            <span class="fs-6 lh-base form-label me-2">Visibility:</span>
                             <small>Private</small>
                           </li>
-                          <li class="mb-3 d-flex">
-                            <span class="form-label me-2">Date Posted:</span>
+                          <li class="mb-20 d-flex">
+                            <span class="fs-6 lh-base form-label me-2">Date Posted:</span>
                             <small>11/20/2019</small>
                           </li>
-                          <li class="mb-3 d-flex">
-                            <span class="form-label me-2">Deadline:</span>
+                          <li class="mb-20 d-flex">
+                            <span class="fs-6 lh-base form-label me-2">Deadline:</span>
                             <small>11/30/2019 5pm</small>
                           </li>
                           <li class="mb-0 d-flex">
-                            <span class="form-label me-2">Time Left:</span>
+                            <span class="fs-6 lh-base form-label me-2">Time Left:</span>
                             <small>2 days 11 hours minutes </small>
                           </li>
                         </ul>
@@ -82,7 +82,7 @@
                                 <td><div>Desc 1</div></td>
                                 <td><div>100</div></td>
                                 <td><div>bag</div></td>
-                                <td class="ps-0"><div><input type="text" class="form-control"></div></td>
+                                <td class="ps-0"><div><input type="text" class="form-control w-75"></div></td>
                               </tr>
                               <tr>
                                 <td class="text-center"><div>2</div></td>
@@ -90,7 +90,7 @@
                                 <td><div>Desc 2</div></td>
                                 <td><div>100</div></td>
                                 <td><div>bag</div></td>
-                                <td class="ps-0"><div><input type="text" class="form-control"></div></td>
+                                <td class="ps-0"><div><input type="text" class="form-control w-75"></div></td>
                               </tr>
                               <tr>
                                 <td class="text-center"><div>3</div></td>
@@ -98,14 +98,14 @@
                                 <td><div>Desc 3</div></td>
                                 <td><div>100</div></td>
                                 <td><div>bag</div></td>
-                                <td class="ps-0"><div><input type="text" class="form-control"></div></td>
+                                <td class="ps-0"><div><input type="text" class="form-control w-75"></div></td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
 
                         <div class="text-end pt-10">
-                          <button type="submit" class="btn btn-primary px-4">
+                          <button type="submit" class="btn btn-primary px-lg-5">
                             Submit
                           </button>
                         </div>
