--- a/src/contractor-view/bids-view.html
+++ b/src/contractor-view/bids-view.html
@@ -34,31 +34,31 @@
                         
                         <ul class="list-unstyled mb-30 lh-lg">
                           <li class="mb-1">
-                            <span class="form-label me-2">Name:</span>
+                            <span class="fs-6 lh-base form-label me-2">Name:</span>
                             <small>Bricks and Mortar</small>
                           </li>
                           <li class="mb-1">
-                            <span class="form-label me-2">Status:</span>
+                            <span class="fs-6 lh-base form-label me-2">Status:</span>
                             <small>Active</small>
                           </li>
                           <li class="mb-1">
-                            <span class="form-label me-2">Pricing View:</span>
+                            <span class="fs-6 lh-base form-label me-2">Pricing View:</span>
                             <small>Open</small>
                           </li>
                           <li class="mb-1">
-                            <span class="form-label me-2">Visibility:</span>
+                            <span class="fs-6 lh-base form-label me-2">Visibility:</span>
                             <small>Private</small>
                           </li>
                           <li class="mb-1">
-                            <span class="form-label me-2">Date Posted:</span>
+                            <span class="fs-6 lh-base form-label me-2">Date Posted:</span>
                             <small>11/20/2019</small>
                           </li>
                           <li class="mb-1">
-                            <span class="form-label me-2">Deadline:</span>
+                            <span class="fs-6 lh-base form-label me-2">Deadline:</span>
                             <small>11/30/2019 5pm</small>
                           </li>
                           <li class="mb-0">
-                            <span class="form-label me-2">Time Left:</span>
+                            <span class="fs-6 lh-base form-label me-2">Time Left:</span>
                             <small>2 days 11 hours minutes </small>
                           </li>
                         </ul>
