--- a/src/contractor-view/inbox-messages.html
+++ b/src/contractor-view/inbox-messages.html
@@ -30,7 +30,7 @@
                     <div class="bg-white shadow rounded-3 pt-4 px-2 pb-36 px-lg-4">
                       <h1 class="h1 fw-bolder mb-14">Inbox messages</h1>
                       
-                      <div class="table-responsive table-x mb-30">
+                      <div class="table-responsive table-x mb-3">
                         <table class="table table-striped">
                           <thead>
                             <tr>
@@ -47,6 +47,60 @@
                               <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
                               <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
                             </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Emp1</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">Public</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1">12/11/2018 1:15 pm / am</a></div></td>
+                              <td><div><a href="#" data-bs-toggle="modal" data-bs-target="#inboxMessage1"><svg class="icon icon-delete"><use xlink:href="#icon-delete"></use></svg></a></div></td>
+                            </tr>                            
                           </tbody>
                         </table>
                       </div>
