--- a/src/contractor-view/notifications-settings.html
+++ b/src/contractor-view/notifications-settings.html
@@ -28,46 +28,46 @@
                     @require('./../components/navbar.html')
 
                     <div class="bg-white shadow rounded-3 pt-4 px-2 pb-36 px-lg-4">
-                      <h1 class="h1 fw-bolder mb-14">Notifications</h1>
-                      <h6 class="fsz-18 mb-20">
+                      <h1 class="h1 fw-bolder mb-0">Notifications</h1>
+                      <h6 class="fsz-18 mb-4">
                         Select type of notification you would like to receive
                       </h6>
                       
                       <form class="form">
-                        <ul class="list-unstyled mb-3">
-                          <li class="mb-2">
+                        <ul class="list-unstyled mb-4">
+                          <li class="mb-10">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications1">
+                              <input class="form-check-input" type="checkbox" value="" id="Notifications1" checked>
                               <label class="form-check-label" for="Notifications1">
                                 <small class="fw-normal">Change in Tender</small>
                               </label>
                             </div>
                           </li>
-                          <li class="mb-2">
+                          <li class="mb-10">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications2">
+                              <input class="form-check-input" type="checkbox" value="" id="Notifications2" checked>
                               <label class="form-check-label" for="Notifications2">
                                 <small class="fw-normal">Withdraw of Tender</small>
                               </label>
                             </div>
                           </li>
-                          <li class="mb-2">
+                          <li class="mb-10">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications3">
+                              <input class="form-check-input" type="checkbox" value="" id="Notifications3" checked>
                               <label class="form-check-label" for="Notifications3">
                                 <small class="fw-normal">End of Tender</small>
                               </label>
                             </div>
                           </li>
-                          <li class="mb-2">
+                          <li class="mb-10">
                             <div class="form-check">
-                              <input class="form-check-input" type="checkbox" value="" id="Notifications4">
+                              <input class="form-check-input" type="checkbox" value="" id="Notifications4" checked>
                               <label class="form-check-label" for="Notifications4">
                                 <small class="fw-normal">Private message</small>
                               </label>
                             </div>
                           </li>
-                          <li class="mb-2">
+                          <li class="mb-10">
                             <div class="form-check">
                               <input class="form-check-input" type="checkbox" value="" id="Notifications5">
                               <label class="form-check-label" for="Notifications5">
@@ -75,7 +75,7 @@
                               </label>
                             </div>
                           </li>
-                          <li class="mb-2">
+                          <li class="mb-10">
                             <div class="form-check">
                               <input class="form-check-input" type="checkbox" value="" id="Notifications6">
                               <label class="form-check-label" for="Notifications6">
@@ -83,7 +83,7 @@
                               </label>
                             </div>
                           </li>
-                          <li class="mb-2">
+                          <li class="mb-10">
                             <div class="form-check">
                               <input class="form-check-input" type="checkbox" value="" id="Notifications7">
                               <label class="form-check-label" for="Notifications7">
@@ -91,7 +91,7 @@
                               </label>
                             </div>
                           </li>
-                          <li class="mb-2">
+                          <li class="mb-10">
                             <div class="form-check">
                               <input class="form-check-input" type="checkbox" value="" id="Notifications8">
                               <label class="form-check-label" for="Notifications8">
@@ -101,7 +101,7 @@
                           </li>
                         </ul>
 
-                        <button class="btn btn-primary px-4">
+                        <button class="btn btn-primary px-lg-5">
                           Change
                         </button>
                       </form>
