--- a/src/contractor-view/notifications.html
+++ b/src/contractor-view/notifications.html
@@ -32,7 +32,7 @@
 
                       <div class="pb-3">
                         <div class="card mb-2">
-                          <div class="card-body pb-1">
+                          <div class="card-body pb-2">
                             <h6 class="card-title">
                               <a href="#">
                                 Emp1 closed tender of Bricks and stuff
@@ -45,7 +45,46 @@
                         </div>
 
                         <div class="card mb-2">
-                          <div class="card-body pb-1">
+                          <div class="card-body pb-2">
+                            <h6 class="card-title">
+                              <a href="#">
+                                Emp1 closed tender of Bricks and stuff
+                              </a>
+                            </h6>
+                            <p class="card-text">
+                              2 years, 2 months ago
+                            </p>
+                          </div>
+                        </div>
+
+                        <div class="card mb-2">
+                          <div class="card-body pb-2">
+                            <h6 class="card-title">
+                              <a href="#">
+                                Emp1 closed tender of Bricks and stuff
+                              </a>
+                            </h6>
+                            <p class="card-text">
+                              2 years, 2 months ago
+                            </p>
+                          </div>
+                        </div>
+
+                        <div class="card mb-2">
+                          <div class="card-body pb-2">
+                            <h6 class="card-title">
+                              <a href="#">
+                                Emp1 closed tender of Bricks and stuff
+                              </a>
+                            </h6>
+                            <p class="card-text">
+                              2 years, 2 months ago
+                            </p>
+                          </div>
+                        </div>
+
+                        <div class="card mb-2">
+                          <div class="card-body pb-2">
                             <h6 class="card-title">
                               <a href="#">
                                 Emp1 closed tender of Bricks and stuff
@@ -69,7 +108,9 @@
                           <li class="page-item active" aria-current="page">
                             <a class="page-link" href="#">2</a>
                           </li>
-                          <li class="page-item"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item"><a class="page-link" href="#">...</a></li>
+                          <li class="page-item"><a class="page-link" href="#">9</a></li>
+                          <li class="page-item"><a class="page-link" href="#">10</a></li>
                           <li class="page-item">
                             <a class="page-link" href="#">
                               <svg class="icon icon-right"><use xlink:href="#icon-right"></use></svg>
