--- a/src/contractor-view/profile.html
+++ b/src/contractor-view/profile.html
@@ -43,7 +43,7 @@
                             <div class="mb-2">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-name" class="col-form-label py-0">Name:</label>
+                                  <label for="profile-name" class="fs-6 lh-base col-form-label py-0">Name:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-name" class="form-control" readonly value="Vasyl">
@@ -54,7 +54,7 @@
                             <div class="mb-2">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-email" class="col-form-label py-0">E-mail:</label>
+                                  <label for="profile-email" class="fs-6 lh-base col-form-label py-0">E-mail:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-email" class="form-control" readonly value="chernyakvasyl@gmail.com">
@@ -65,7 +65,7 @@
                             <div class="mb-2">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-phone" class="col-form-label py-0">Mobile phone:</label>
+                                  <label for="profile-phone" class="fs-6 lh-base col-form-label py-0">Mobile phone:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-phone" class="form-control" readonly value="+380 686 287 487">
@@ -76,7 +76,7 @@
                             <div class="mb-2">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-type" class="col-form-label py-0">Type:</label>
+                                  <label for="profile-type" class="fs-6 lh-base col-form-label py-0">Type:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-type" class="form-control" readonly value="individual">
@@ -87,7 +87,7 @@
                             <div class="mb-2">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-expertise" class="col-form-label py-0">Expertise:</label>
+                                  <label for="profile-expertise" class="fs-6 lh-base col-form-label py-0">Expertise:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-expertise" class="form-control" readonly value="Expertise 1">
@@ -98,7 +98,7 @@
                             <div class="mb-2">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-years-expertise" class="col-form-label py-0">Years of Expertise:</label>
+                                  <label for="profile-years-expertise" class="fs-6 lh-base col-form-label py-0">Years of Expertise:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-years-expertise" class="form-control" readonly value="1-5 years">
@@ -109,7 +109,7 @@
                             <div class="mb-2">
                               <div class="row g-0">
                                 <div class="col-sm-auto">
-                                  <label for="profile-cover-letter" class="col-form-label py-0">Cover letter:</label>
+                                  <label for="profile-cover-letter" class="fs-6 lh-base col-form-label py-0">Cover letter:</label>
                                 </div>
                                 <div class="col">
                                   <textarea id="profile-cover-letter" rows="4" class="form-control" readonly >Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt</textarea>
