--- a/src/employer-view/search-service.html
+++ b/src/employer-view/search-service.html
@@ -28,22 +28,22 @@
                     @require('./../components/navbar.html')
 
                     <div class="bg-white shadow rounded-3 pt-4 px-2 pb-36 px-lg-4">
-                      <h1 class="h1 fw-bolder mb-14">Search for Service Providers</h1>
+                      <h1 class="h1 fw-bolder mb-0">Search for Service Providers</h1>
                       
-                      <div class="row">
-                        <div class="col-lg-6">
-                          <h6 class="fsz-18 mb-20">
-                            Invite Contractors
+                      <div class="row justify-content-between">
+                        <div class="col-lg-6 col-xl-5 mb-3 mb-lg-0">
+                          <h6 class="fsz-18 mb-30">
+                            Filters
                           </h6>
 
                           <form class="form">
-                            <div class="mb-3">
+                            <div class="mb-30">
                               <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
-                                  <label class="col-form-label py-0">Type</label>
+                                <div class="col-sm-4 col-lg-4 text-start mb-2 mb-sm-0">
+                                  <label class="fs-6 lh-base col-form-label py-0">Type</label>
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
-                                  <div class="form-check">
+                                  <div class="form-check mb-2">
                                     <input class="form-check-input" type="checkbox" value="" id="type1">
                                     <label class="form-check-label" for="type1">
                                       <small class="fw-normal">Provider Individual</small>
@@ -59,13 +59,13 @@
                               </div>
                             </div>
 
-                            <div class="mb-3">
+                            <div class="mb-30">
                               <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
-                                  <label class="col-form-label py-0">Expertise</label>
+                                <div class="col-sm-4 col-lg-4 text-start mb-2 mb-sm-0">
+                                  <label class="fs-6 lh-base col-form-label py-0">Expertise</label>
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
-                                  <div class="form-check">
+                                  <div class="form-check mb-2">
                                     <input class="form-check-input" type="checkbox" value="" id="Expertise1">
                                     <label class="form-check-label" for="Expertise1">
                                       <small class="fw-normal">Expertise 1</small>
@@ -81,13 +81,13 @@
                               </div>
                             </div>
 
-                            <div class="mb-3">
+                            <div class="mb-30">
                               <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
-                                  <label class="col-form-label py-0">Experience</label>
+                                <div class="col-sm-4 col-lg-4 text-start mb-2 mb-sm-0">
+                                  <label class="fs-6 lh-base col-form-label py-0">Experience</label>
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
-                                  <div class="form-check">
+                                  <div class="form-check mb-2">
                                     <input class="form-check-input" type="checkbox" value="" id="Experience1">
                                     <label class="form-check-label" for="Experience1">
                                       <small class="fw-normal">Experience 1</small>
@@ -103,20 +103,20 @@
                               </div>
                             </div>
 
-                            <div class="text-center pt-2">
-                              <button type="submit" class="btn btn-primary">
+                            <div class="text-lg-center pt-2">
+                              <button type="submit" class="btn btn-primary px-36">
                                 Search
                               </button>                              
                             </div>
                           </form>
                         </div>
 
-                        <div class="col-lg-6">
-                          <h6 class="fsz-18 mb-20">
-                            Invite Contractors
+                        <div class="col-lg-6 col-xl-6 ps-xl-6">
+                          <h6 class="fsz-18 mb-4">
+                            Search Results
                           </h6>
 
-                          <div>
+                          <div class="ms-xl-n3">
                             <div class="card mb-10">
                               <div class="card-body py-14 px-4">
                                 <a href="#" class="d-block text-reset text-decoration-none">
