--- a/src/employer-view/tenders-details.html
+++ b/src/employer-view/tenders-details.html
@@ -36,7 +36,7 @@
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="tender-name" class="col-form-label py-0">Name:</label>
+                                  <label for="tender-name" class="fs-6 lh-base col-form-label py-0">Name:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="tender-name" class="form-control" readonly value="Bricks and Mortar">
@@ -47,7 +47,7 @@
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-email" class="col-form-label py-0">Status:</label>
+                                  <label for="profile-email" class="fs-6 lh-base col-form-label py-0">Status:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-email" class="form-control" readonly value="Active">
@@ -58,7 +58,7 @@
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-phone" class="col-form-label py-0">Pricing View:</label>
+                                  <label for="profile-phone" class="fs-6 lh-base col-form-label py-0">Pricing View:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-phone" class="form-control" readonly value="Open">
@@ -69,7 +69,7 @@
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-type" class="col-form-label py-0">Visibility:</label>
+                                  <label for="profile-type" class="fs-6 lh-base col-form-label py-0">Visibility:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-type" class="form-control" readonly value="Private">
@@ -80,7 +80,7 @@
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-expertise" class="col-form-label py-0">Date Posted:</label>
+                                  <label for="profile-expertise" class="fs-6 lh-base col-form-label py-0">Date Posted:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-expertise" class="form-control" readonly value="11/20/2019">
@@ -91,7 +91,7 @@
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-years-expertise" class="col-form-label py-0"> Deadline:</label>
+                                  <label for="profile-years-expertise" class="fs-6 lh-base col-form-label py-0"> Deadline:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-years-expertise" class="form-control" readonly value="11/30/2019 5pm">
@@ -102,7 +102,7 @@
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-years-expertise" class="col-form-label py-0"> Time Left:</label>
+                                  <label for="profile-years-expertise" class="fs-6 lh-base col-form-label py-0"> Time Left:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-years-expertise" class="form-control" readonly value="2 days 11 hours minutes">
