--- a/src/employer-view/tenders.html
+++ b/src/employer-view/tenders.html
@@ -30,7 +30,7 @@
                     <div class="bg-white shadow rounded-3 pt-4 px-2 pb-36 px-lg-4">
                       <h1 class="h1 fw-bolder mb-14">My Tenders</h1>
                       
-                      <div class="table-responsive table-x mb-30">
+                      <div class="table-responsive table-x mb-3">
                         <table class="table table-striped">
                           <thead>
                             <tr>
@@ -144,6 +144,66 @@
                             </tr>
                           </thead>
                           <tbody>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
                             <tr>
                               <td><div>Bricks and stuff</div></td>
                               <td><div>Consulting</div></td>
