--- a/src/contractor-view/search-tenders-results.html
+++ b/src/contractor-view/search-tenders-results.html
@@ -31,13 +31,13 @@
                       <h1 class="h1 fw-bolder mb-14">Search for Tenders</h1>                      
 
                       <div class="row">
-                        <div class="col-sm-6 mb-3 mb-sm-0">
+                        <div class="col-md-6 mb-3 mb-md-0">
                           <h6 class="fsz-18 mb-30">
                             Filters
                           </h6>
 
                           <div class="row">
-                            <div class="col-lg-8">
+                            <div class="col-xl-8">
                               <form class="form">
                                 <div class="mb-14">
                                   <div class="position-relative">
@@ -99,22 +99,22 @@
                           </div>
                         </div>
 
-                        <div class="col-sm-6">
-                          <h6 class="fsz-18 mb-0 lh-base ps-xl-6">
+                        <div class="col-md-6">
+                          <h6 class="fsz-18 mb-0 lh-base">
                             Search Results
                           </h6>
 
                           <div class="d-none">
-                            <p class="mb-0 ps-xl-6">
+                            <p class="mb-0">
                               <small>
                                 We didn`t find any tenders that match <br> your search
                               </small>
                             </p>
-                            <img src="../images/img-2.svg" alt="" class="img-fluid d-block ms-xl-4">
+                            <img src="../images/img-2.svg" alt="" class="img-fluid d-block">
                           </div>
 
                           <div class="d-block">
-                            <div class="table-responsive table-x mb-30">
+                            <div class="table-responsive table-x mb-3">
                               <table class="table table-striped">
                                 <tbody>
                                   <tr>
