--- a/src/contractor-view/search-tenders.html
+++ b/src/contractor-view/search-tenders.html
@@ -32,13 +32,13 @@
                       
 
                       <div class="row">
-                        <div class="col-sm-6 mb-3 mb-sm-0">
+                        <div class="col-md-6 mb-3 mb-md-0">
                           <h6 class="fsz-18 mb-30">
                             Filters
                           </h6>
 
                           <div class="row">
-                            <div class="col-lg-8">
+                            <div class="col-xl-8">
                               <form class="form">
                                 <div class="mb-14">
                                   <div class="position-relative">
@@ -100,17 +100,17 @@
                           </div>
                         </div>
 
-                        <div class="col-sm-6 pt-10">
-                          <h6 class="fsz-18 mb-0 lh-base ps-xl-6">
+                        <div class="col-md-6 pt-10">
+                          <h6 class="fsz-18 mb-0 lh-base">
                             Search Results
                           </h6>
                           <div class="d-block">
-                            <p class="mb-0 ps-xl-6">
+                            <p class="mb-0">
                               <small>
                                 We didn`t find any tenders that match <br> your search
                               </small>
                             </p>
-                            <img src="../images/img-2.svg" alt="" class="img-fluid d-block ms-xl-4">
+                            <img src="../images/img-2.svg" alt="" class="img-fluid">
                           </div>
 
                           <div class="d-none">
