--- a/src/employer-view/tenders-new-save.html
+++ b/src/employer-view/tenders-new-save.html
@@ -47,7 +47,7 @@
                             <div class="mb-2">
                               <div class="row justify-content-center align-items-center g-2">
                                 <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-title" class="col-form-label py-0">Title:</label>
+                                  <label for="tender-title" class="fs-6 lh-base col-form-label py-0">Title:</label>
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
                                   <div class="position-relative">
@@ -60,7 +60,7 @@
                             <div class="mb-2">
                               <div class="row justify-content-center align-items-center g-2">
                                 <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-pricing" class="col-form-label py-0">Pricing Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                                  <label for="tender-pricing" class="fs-6 lh-base col-form-label py-0">Pricing Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
                                   <div class="position-relative">
@@ -78,7 +78,7 @@
                             <div class="mb-2">
                               <div class="row justify-content-center align-items-center g-2">
                                 <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-visibility" class="col-form-label py-0">Tender Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                                  <label for="tender-visibility" class="fs-6 lh-base col-form-label py-0">Tender Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
                                   <div class="position-relative">
@@ -96,7 +96,7 @@
                             <div class="mb-2">
                               <div class="row justify-content-center align-items-center g-2">
                                 <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-visibility" class="col-form-label py-0">Deadline:</label> 
+                                  <label for="tender-visibility" class="fs-6 lh-base col-form-label py-0">Deadline:</label> 
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
                                   <div class="position-relative">
@@ -117,7 +117,7 @@
                             <div class="mb-2">
                               <div class="row justify-content-center align-items-center g-2">
                                 <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-industry" class="col-form-label py-0">Industry: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                                  <label for="tender-industry" class="fs-6 lh-base col-form-label py-0">Industry: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
                                   <div class="position-relative">
@@ -135,7 +135,7 @@
                             <div class="mb-2">
                               <div class="row justify-content-center align-items-start g-2">
                                 <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-description" class="col-form-label py-0">Description: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                                  <label for="tender-description" class="fs-6 lh-base col-form-label py-0">Description: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
                                   <div class="position-relative">
@@ -147,13 +147,13 @@
                           </div>
 
                           <div class="col-lg-6">
-                            <img src="../images/img-3.svg" alt="" class="img-fluid">
+                            <img src="../images/img-3.svg" alt="" class="img-fluid d-block mx-auto mt-lg-3 ms-lg-3">
                           </div>
                         </div>
                         
                         <div class="row mb-10">
                           <div class="col-lg-12  mb-2">
-                            <div class="form-label">
+                            <div class="fs-6 lh-base form-label">
                               Item(s)
                             </div>
                           </div>
@@ -217,7 +217,7 @@
 
                         <div class="row">
                           <div class="col-lg-12  mb-2">
-                            <div class="form-label">
+                            <div class="fs-6 lh-base form-label">
                               Attachments
                             </div>
                           </div>
@@ -231,11 +231,11 @@
                           </div>
                         </div>
 
-                        <div class="text-end">
-                          <a href="#" class="btn btn-light px-4">
+                        <div class="text-lg-end pt-30">
+                          <a href="#" class="btn btn-light px-36">
                             Back
                           </a>
-                          <a href="#" class="btn btn-primary px-4 ms-3">
+                          <a href="#" class="btn btn-primary px-36 ms-3">
                             Next
                           </a>
                         </div>
