--- a/src/employer-view/tenders-new.html
+++ b/src/employer-view/tenders-new.html
@@ -28,11 +28,11 @@
                     @require('./../components/navbar.html')
 
                     <div class="bg-white shadow rounded-3 pt-4 px-2 pb-36 px-lg-4">
-                      <h1 class="h1 fw-bolder mb-14">Create New Tender</h1>
+                      <h1 class="h1 fw-bolder mb-10">Create New Tender</h1>
                       
                       <form class="form">
 
-                        <div class="row">
+                        <div class="row g-0">
                           <div class="col-lg-6">
                             <div class="mb-4 pb-2">
                               <small class="d-block mb-10">
@@ -45,11 +45,11 @@
                             </div>
 
                             <div class="mb-2">
-                              <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-title" class="col-form-label py-0">Title:</label>
+                              <div class="row justify-content-center align-items-center g-2 me-xl-n5">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label for="tender-title" class="fs-6 lh-base col-form-label py-0">Title:</label>
                                 </div>
-                                <div class="col-sm-8 col-lg-7">
+                                <div class="col-sm-8 col-lg-7 ms-xl-n5">
                                   <div class="position-relative">
                                     <input type="text" id="tender-title" class="form-control" placeholder="IT Technologies">
                                   </div>
@@ -58,11 +58,11 @@
                             </div>
 
                             <div class="mb-2">
-                              <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-pricing" class="col-form-label py-0">Pricing Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                              <div class="row justify-content-center align-items-center g-2 me-xl-n5">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label for="tender-pricing" class="fs-6 lh-base col-form-label py-0">Pricing Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
-                                <div class="col-sm-8 col-lg-7">
+                                <div class="col-sm-8 col-lg-7 ms-xl-n5">
                                   <div class="position-relative">
                                     <select class="form-select" id="tender-pricing" aria-label="Business Type">
                                       <option value="1" selected>Option 1</option>
@@ -76,11 +76,11 @@
                             </div>
 
                             <div class="mb-2">
-                              <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-visibility" class="col-form-label py-0">Tender Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                              <div class="row justify-content-center align-items-center g-2 me-xl-n5">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label for="tender-visibility" class="fs-6 lh-base col-form-label py-0">Tender Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
-                                <div class="col-sm-8 col-lg-7">
+                                <div class="col-sm-8 col-lg-7 ms-xl-n5">
                                   <div class="position-relative">
                                     <select class="form-select" id="tender-visibility" aria-label="Business Type">
                                       <option value="1" selected>Option 1</option>
@@ -94,14 +94,14 @@
                             </div>
 
                             <div class="mb-2">
-                              <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-visibility" class="col-form-label py-0">Deadline:</label> 
+                              <div class="row justify-content-center align-items-center g-2 me-xl-n5">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label for="tender-visibility" class="fs-6 lh-base col-form-label py-0">Deadline:</label> 
                                 </div>
-                                <div class="col-sm-8 col-lg-7">
+                                <div class="col-sm-8 col-lg-7 ms-xl-n5">
                                   <div class="position-relative">
                                     <div class="calendar">
-                                      <input type="text" name="Deadline" class="form-control" value="11/07/2021 " readonly>
+                                      <input type="text" name="Deadline" class="form-control" value="11/07/2021 ">
 
                                       <button class="btn h-100 border-start rounded-0 position-absolute top-0 end-0">
                                         <svg class="icon icon-calendar"><use xlink:href="#icon-calendar"></use></svg>
@@ -115,11 +115,11 @@
                             </div>
 
                             <div class="mb-2">
-                              <div class="row justify-content-center align-items-center g-2">
-                                <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-industry" class="col-form-label py-0">Industry: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                              <div class="row justify-content-center align-items-center g-2 me-xl-n5">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label for="tender-industry" class="fs-6 lh-base col-form-label py-0">Industry: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
-                                <div class="col-sm-8 col-lg-7">
+                                <div class="col-sm-8 col-lg-7 ms-xl-n5">
                                   <div class="position-relative">
                                     <select class="form-select" id="tender-industry" aria-label="Business Type">
                                       <option value="1" selected>Option 1</option>
@@ -133,13 +133,13 @@
                             </div>
 
                             <div class="mb-2">
-                              <div class="row justify-content-center align-items-start g-2">
-                                <div class="col-sm-4 col-lg-5 text-start text-sm-end mb-2 mb-sm-0">
-                                  <label for="tender-description" class="col-form-label py-0">Description: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
+                              <div class="row justify-content-center align-items-start g-2 me-xl-n5">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label for="tender-description" class="fs-6 lh-base col-form-label py-0">Description: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
-                                <div class="col-sm-8 col-lg-7">
+                                <div class="col-sm-8 col-lg-7 ms-xl-n5">
                                   <div class="position-relative">
-                                    <textarea id="tender-description" rows="4" class="form-control" placeholder="Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt"></textarea>
+                                    <textarea id="tender-description" rows="6" class="form-control" placeholder="Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt"></textarea>
                                   </div>
                                 </div>
                               </div>
@@ -147,13 +147,13 @@
                           </div>
 
                           <div class="col-lg-6">
-                            <img src="../images/img-3.svg" alt="" class="img-fluid">
+                            <img src="../images/img-3.svg" alt="" class="img-fluid d-block mx-auto mt-lg-3 ms-lg-3">
                           </div>
                         </div>
                         
                         <div class="row mb-10">
                           <div class="col-lg-12  mb-2">
-                            <div class="form-label">
+                            <div class="fs-6 lh-base form-label">
                               Item(s)
                             </div>
                           </div>
@@ -218,7 +218,7 @@
                             </div>
 
                             <div class="text-center">
-                              <a href="#" class="btn btn-light px-4">
+                              <a href="#" class="btn btn-light px-lg-5">
                                 + Add More
                               </a>
                             </div>
@@ -228,22 +228,22 @@
 
                         <div class="row">
                           <div class="col-lg-12  mb-2">
-                            <div class="form-label">
+                            <div class="fs-6 lh-base form-label">
                               Attachments
                             </div>
                           </div>
                           <div class="col-lg-12">
-                            <a href="#" class="btn btn-light px-4">
+                            <a href="#" class="btn btn-light px-lg-5">
                               + Add More
                             </a>
                           </div>
                         </div>
 
-                        <div class="text-end">
-                          <a href="#" class="btn btn-light px-4">
+                        <div class="text-lg-end pt-30">
+                          <a href="#" class="btn btn-light px-36">
                             Back
                           </a>
-                          <a href="#" class="btn btn-primary px-4 ms-3">
+                          <a href="#" class="btn btn-primary px-36 ms-3">
                             Next
                           </a>
                         </div>
